# project-04-machine-learning

./: README.md  app.py  pyproject.toml  testes.ipynb
