[project]
name = "project-04-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "levipoiani95",email = "levipoiani95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project_04_machine_learning", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
